style minimalist main section

--- a/minimalist/index.html
+++ b/minimalist/index.html
@@ -8,7 +8,8 @@
     <title>Mind & Body</title>
 </head>
 <body>
-    <section>
+    <section class="front-page">
+        <img class="hero" src="./assets/hero.png" alt="meditation">
         <nav>
             <div class="logo">
                 <img src="./assets/logo.svg" alt="mind & body">
