--- a/minimalist/index.html
+++ b/minimalist/index.html
@@ -36,5 +36,35 @@
             </div>
         </div>
     </section>
+    <section class="classes">
+        <div class="classes-description">
+            <h2>Classes tailrored for you</h2>
+            <h3>It's time to heal your mind and body</h3>
+        </div>
+        <div class="videos">
+            <div class="pilates">
+                <h3>Pilates</h3>
+                <video src="./assets/pilates.mp4"></video>
+            </div>
+            <div class="yoga">
+                <h3>Yoga</h3>
+                <video src="./assets/yoga.mp4"></video>
+            </div>
+            <div class="meditation">
+                <h3>Meditation</h3>
+                <video src="./assets/meditation.mp4"></video>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="our-story">
+            <h2>Our story...</h2>
+            <p>Always a student, Janet has immersed herself in the ancient practices of yoga for over thirty years. A global yoga teacher, she shares the teachings from the heart. Through curiosity, devotion, and dedication she creates a unique approach to living yoga.</p>
+        </div>
+        <img src="./assets/our-story.png" alt="our-story">
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js" integrity="sha512-tHvUcUQYi35zApvAa5TNR3fNhBQkVtkmWKfacnpxmix4/VTGz1lGjIVyLMp7gLgAvg+aKJjnVKokXJNS5GZ+/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
