--- a/minimalist/index.html
+++ b/minimalist/index.html
@@ -44,15 +44,15 @@
         <div class="videos">
             <div class="pilates">
                 <h3>Pilates</h3>
-                <video src="./assets/pilates.mp4"></video>
+                <video muted loop class="video" src="./assets/pilates.mp4"></video>
             </div>
             <div class="yoga">
                 <h3>Yoga</h3>
-                <video src="./assets/yoga.mp4"></video>
+                <video muted loop class="video" src="./assets/yoga.mp4"></video>
             </div>
             <div class="meditation">
                 <h3>Meditation</h3>
-                <video src="./assets/meditation.mp4"></video>
+                <video muted loop class="video" src="./assets/meditation.mp4"></video>
             </div>
         </div>
     </section>
